--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^11.0.3",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
+    "react-burger-menu": "^3.0.9",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.6.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-type-animation": "^3.2.0",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1"
   }
 }
